# CanNodeSimulator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: copilot-instructions.md
example/: smoke.eds  smoke.robot  smoke_config.yaml
include/can_node_sim/: Config.hpp  EdsParser.hpp  Logging.hpp  Model.hpp  PdoBuilder.hpp  RobotKeywords.hpp  Simulator.hpp  SocketCanTransport.hpp
src/: Config.cpp  EdsParser.cpp  Model.cpp  PdoBuilder.cpp  RobotKeywords.cpp  Simulator.cpp  SocketCanTransport.cpp  main.cpp
tests/: CMakeLists.txt  test_config.cpp  test_eds_parser.cpp  test_keywords.cpp  test_pdo_builder.cpp  test_simulator.cpp  test_socketcan_transport.cpp
